# biblioteca-universal-arion

./: .gitignore  .tmp_api_vol1.json  .tmp_api_vol10.json  .tmp_api_vol2.json  .tmp_api_vol4.json  .tmp_api_vol7.json  .tmp_apologia_clean.txt  .tmp_book1.xml  .tmp_book2.xml  .tmp_book3.xml  .tmp_build_original.py  .tmp_de_anima.txt  .tmp_extract.py  .tmp_extract2.py  .tmp_extract_greek.py  .tmp_fetch_makura.py  .tmp_gut.html  .tmp_gut2.html  .tmp_makura_index.html  .tmp_makura_ws.html  .tmp_parse.py  .tmp_rilke.html  .tmp_rilke2.html  .tmp_rilke3.html  .tmp_rilke_search.html  .tmp_sonezaki.html  .tmp_sonezaki_en.html  .tmp_vol1.html  .tmp_vol2.html  .tmp_vol3.html  .tmp_vol4.html  .tmp_vol5.html  .tmp_vol9.html  .tmp_wikisource.html  .tmp_ws_book6.html  CHANGELOG.md  CHECKLIST_WEB.md  CLAUDE.md  CONTRIBUTING.md  ESTAT_PROJECTE.md  (+210 more)
.migració-backup-20260325_124040/: estructura_original.txt
De Anima/: .font_info.json
On the Soul/: .font_info.json  original.md
_tmp_copies/: meditacions_llibres_11_12.md  meditacions_llibres_1_2.md  meditacions_llibres_5_6.md  meditacions_llibres_7_8.md  meditacions_llibres_9_10.md  verify.py
agents/: __init__.py  agent_estil.py  agents_retratista.py  anotador_critic.py  base_agent.py  calculador_costos.py  cercador_fonts.py  chunker_agent.py  consell_editorial.py  corrector.py  corrector_normatiu.py  disseny_grafic.py  edicio_critica.py  evaluador_final.py  formatter.py  glossarista.py  introduccio.py  investigador.py  perfeccionament_agent.py  pescador_textos.py  portadista.py  portadista.py.save  publicador_epub.py  reviewer_agent.py  (+4 more)
(+2907 files in other folders)
